# photo-importer

./: README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: publish.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: device.rs  import.rs  lib.rs  main.rs  settings.rs  thumbs.rs
