[package]
name = "krill-photo-importer"
version = "0.1.0"
description = "Import iPhone Camera Roll over USB on Linux"
authors = ["Filip"]
edition = "2021"
rust-version = "1.89"
license = "MIT"

[lib]
name = "krill_photo_importer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
krill-desktop-core = { git = "https://github.com/krill-software/desktop-core", tag = "v0.2.0" }
anyhow = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync", "process", "rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
libheif-rs = { version = "2", optional = true }

[features]
default = ["heic-thumbs"]
# HEIC thumbnail decoding via libheif. Requires `libheif-dev` at build
# time and `libheif1` at runtime. Disable with `--no-default-features`
# if either is missing — HEIC files render with a generic icon instead
# of a real thumbnail.
heic-thumbs = ["dep:libheif-rs"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
